feature: tree-view for project selection

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.34.0",
     "fuse.js": "^7.0.0",
     "micromark": "^4.0.0",
+    "p-map": "^7.0.2",
     "paperizer": "^0.1.6",
     "roboto-fontface": "*",
     "vue": "^3.3.0",
